# projecto-damas

./: CMakeLists.txt  README.md
docs/: diagrama_de_clases.md  requerimientos.md
include/: AIPlayer.h  Board.h  ConsoleGame.h  ConsoleUI.h  FileManager.h  Game.h  GameResult.h  HumanPlayer.h  King.h  Man.h  Move.h  Piece.h  Player.h  Position.h  RuleEngine.h
src/: main.cpp  test_headers.cpp
src/business/: AIPlayer.cpp  Board.cpp  FileManager.cpp  GameResult.cpp  King.cpp  Man.cpp  Move.cpp  Piece.cpp  RuleEngine.cpp
src/file/: FileManager.cpp
src/presentation/: ConsoleUI.cpp
src/ui/: ConsoleGame.cpp
tests/: CMakeLists.txt  test_ai_capture_priority.cpp  test_ai_multi_capture.cpp  test_ai_player.cpp  test_ai_promotion.cpp  test_apply_move.cpp  test_board.cpp  test_captures.cpp  test_console_menu.cpp  test_consoleui.cpp  test_file_manager.cpp  test_game_console.cpp  test_game_over.cpp  test_integration_ai_human.cpp  test_king_valid_moves.cpp  test_man_valid_moves.cpp  test_multi_capture.cpp  test_promotion.cpp  test_remove_and_empty.cpp  test_ruleengine_isvalid.cpp  test_simple_moves.cpp  test_smoke_capture.cpp
